# su3

./: .gitignore  CMakeLists.txt  README  README.md  make.sh  output_openmp_avx.txt  output_openmp_noavx.txt  profile.json  run.sh
include/: global.h  profiler.h  su3.h  su3prod.h  su3v.h  su3v_cuda.cuh  su3v_kokkos.hpp  su3v_openmp.h  ufields.h  utils.h
main/: CMakeLists.txt  aos_cpu.c  aos_gpu.c  aos_gpu_cuda.cu  aos_gpu_kokkos.cpp  aos_gpu_openmp.c  main.c  main_fields.c  main_fieldsv.c  soa_cpu.c  soa_gpu.c  soa_gpu_cuda.cu  soa_gpu_kokkos.cpp  soa_gpu_openmp.c  su3_alg.c  su3_fields.c  su3_fieldsv.c  su3_fieldsva.c  time.c  time_cpu.c  time_gpu.c  utils.c  utils.h
modules/: su3.c  su3prod.c  su3v.c  su3v_cuda.cu  su3v_kokkos.cpp  su3v_openmp.c  ufields.c
scripts/: array_sizes.py  make.sh  make_cpu.sh  make_cpu_daint.sh  make_cpu_geno.sh  make_gpu.sh  make_gpu_daint.sh  make_gpu_geno.sh  parse.py  plot.py  plot.sh  plot_roofline.py  plot_roofline_clusters.py  plot_roofline_cpu.py  plot_roofline_cpu_daint.py  plot_roofline_cpu_geno.py  plot_roofline_gpu.py  plot_roofline_gpu_daint.py  plot_roofline_gpu_geno.py  run.sh  run_cpu.sh  run_gpu.sh  strong_scaling.sh
src/: CMakeLists.txt  main.c  su3.c
