
macro(add_su3_executable name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE su3lib)
endmacro()

add_su3_executable(su3_alg su3_alg.c)
add_su3_executable(su3_fields su3_fields.c)
add_su3_executable(su3_fieldsv su3_fieldsv.c)
add_su3_executable(su3_fieldsva su3_fieldsva.c)
add_su3_executable(time time.c)
add_su3_executable(time_gpu time_gpu.c)
add_su3_executable(aos_gpu aos_gpu.c)
add_su3_executable(aos_cpu aos_cpu.c)

if(ENABLE_CUDA)
    add_executable(soa_gpu_cuda soa_gpu_cuda.cu)
    target_link_libraries(soa_gpu_cuda PRIVATE su3cudakernel)
    set_target_properties(soa_gpu_cuda PROPERTIES CUDA_ARCHITECTURES "90")
endif()
